Timeline scrollbar for MS Edge fix

--- a/mit_cre_timeline/public/css/style.css
+++ b/mit_cre_timeline/public/css/style.css
@@ -1,5 +1,5 @@
 body {
-    -ms-overflow-scroll: none;
+    -ms-overflow-style: none;
 }
 
 body::-webkit-scrollbar {
